--- a/k8s-yamls/externalservice.yaml
+++ b/k8s-yamls/externalservice.yaml
@@ -1,13 +1,12 @@
-apiVersion: v1 
-kind: Service
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
 metadata:
-  name: demo-ui-service
+    name: my-autoscaler
 spec:
-  ports:
-  - name: http
-    port: 80
-    targetPort: 8080
-    protocol: TCP
-  selector:
-    app: demo-ui
-  type: LoadBalancer
+    scaleTargetRef:
+        apiVersion: apps/v1
+        kind: Deployment
+        name: my-deployment
+    minReplicas: 2
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 60
